2006-04-10  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/tree/DefaultTreeSelectionModel.java
	(addSelectionPaths, setSelectionPaths): Call 
	insureUniqueness. (clone, setRowMapper): Implemented.
	* TreePath (path): Marked final.

2006-04-10  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/tree/DefaultTreeSelectionModel.java:
	Documented and autoformatted. (insureUniqueness):
	Removed stub marking.

2006-04-09  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/SizeSequence.java
	(sizes): Don't initialise here,
	(SizeSequence(int, int)): Initialise sizes field,
	(SizeSequence(int[])): Clone argument instead of calling setSizes(),
	(setSize): Do nothing when index is out of bounds,
	(getIndex): Implemented,
	(setSizes): Reimplemented,
	(getSizes): Likewise,
	(insertEntries): Likewise,
	(removeEntries): Likewise,
	plus added API docs all over.

2006-04-09  Audrius Meskauskas  <AudriusA@Bioinformatics.org

	* gnu/CORBA/gnuRequest.java (submit): Do not read any response after
	one way message and retry after any IOException.

2006-04-09  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/CORBA/CDR/EncapsulationStream.java (constructor):
	Set the byte order.

2006-04-09  Wolfgang Baer  <WBaer@gmx.de>

	* org/omg/PortableServer/ServantLocatorPOA.java: 
	(preinvoke, postinvoke): Remove default implementation.
	* org/omg/PortableServer/ServantActivatorPOA.java: 
	(incarnate, etherealize): Remove default implementation.	
	* org/omg/PortableInterceptor/ObjectReferenceFactory.java: 
	Extends from ValueBase and not from ObjectReferenceFactoryOperations.
	(make_object): Moved method from ObjectReferenceFactoryOperations.
	* org/omg/PortableInterceptor/ObjectReferenceFactoryOperations.java: 
	Removed unspecified interface.	
	* org/omg/DynamicAny/_DynAnyStub.java:
	(_DynAnyStub(Delegate)): Removed constructor.
	* org/omg/DynamicAny/_DynArrayStub.java,
	* org/omg/DynamicAny/_DynAnyFactoryStub.java,